# Learn_RAG

./: AgenticRAG.ipynb  CorrectiveRAG.ipynb  adaptive_rag.ipynb  autonomous_rag.ipynb  pyproject.toml  requirements.txt
DataInjectionParsing/: DataparsingPDF.ipynb  data_injection.ipynb
DataInjectionParsing/data/structured_files/: inventory.xlsx
